gnome-settings-daemon (3.12.2-1ubuntu3) UNRELEASED; urgency=medium

  * Drop revert_power_310.patch and build against upower 0.99. (LP: #1330037)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 31 Oct 2014 11:06:47 +0100

gnome-settings-daemon (3.12.2-1ubuntu2) utopic; urgency=medium

  * debian/patches/geoclue-build-fixes.patch: disable build of new
    datetime plugin since geoclue-2.0 is not currently in main.

 -- Tim Lunn <tim@feathertop.org>  Wed, 01 Oct 2014 07:45:02 +1000

gnome-settings-daemon (3.12.2-1ubuntu1) utopic; urgency=medium

  * New Upstream Release (LP: #1372346)
  * Merge with Debian, remaining changes:
    + Split out schemas into gnome-settings-daemon-schemas so 
      unity-settings-daemon can use them 
    + debian/patches:
       - 05_disable_corner_tapping.patch:
          Disable corner tapping when disabling tap to click
       - 43_disable_locale_settings.patch:
          Don't set locales after sourcing .profile
       - 45_suppress-printer-may-not-be-connected-notification.patch
       - 53_sync_input_sources_to_accountsservice.patch
       - 64_restore_terminal_keyboard_shortcut_schema.patch
       - correct_logout_action.patch
          display the logout action on ctrl-alt-del (lp: #961501)
       - migrate_metacity_keys.patch
          Migrate screenshot/terminal keys from metacity gconf as well
          (LP: #1058004)
       - nexus-orientation.patch
          Fix screen rotation on nexus7
       - ubuntu-lid-close-suspend.patch
          Reimplement support for setting lid close suspend actions
       - ubuntu-force-lock-group.patch
          Lock the XKB group when ISO_Next_Group is pressed (lp: #1318673)
       - revert_background_dropping.patch
          Keep gsettings keys background u-s-d needs them
       - revert-gsettings-removals.patch
          Revert gsettings keys that were dropped since 3.8, for u-s-d
    + debian/gnome-settings-daemon.install: Install apport hook
    + debian/rules: install upstart scripts